# nexla-doc-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: README.md
src/: config.py  ingestion.py  retrieval.py  server.py
