[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexla-doc-mcp"
version = "0.1.0"
description = "MCP server for PDF document Q&A with RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.scripts]
nexla-doc-mcp = "src.server:main"

[tool.setuptools.packages.find]
include = ["src*"]
